kyverno-networkpolicy-training/code/kyverno-ops/tag11/policy-repo/e2e/image-hygiene/pod-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: latest
spec:
  containers:
  - name: web
    image: nginxinc/nginx-unprivileged:latest
    resources: {requests: {cpu: 10m, memory: 16Mi}, limits: {memory: 64Mi}}
